--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
 
     <h2>Multimedia</h2>
     <p>Imagen de un paisaje hermoso:</p>
-    <img height="480 px" width="280" src="../recursos/imagenes/paisaje.jpg" alt="paisaje hermoso">
+    <img height="480 px" width="280" src="recursos/imagenes/" alt="paisaje hermoso">
 
     <p>Video de Introducción a HTML:</p>
 
     <video width="400" controls>
-        <source src="../recursos/videos/mov_bbb.mp4" type="video/mp4">
+        <source src="recursos/videos/mov_bbb.mp4" type="video/mp4">
     </video>
 
     <p>Audio motivacional:</p>
 
     <audio controls>
-        <source src="../recursos/audios/Lady Gaga, Bruno Mars - Die With A Smile (Official Music Video).mp3" type="audio/mpeg">
+        <source src="recursos/audios/Lady Gaga, Bruno Mars - Die With A Smile (Official Music Video).mp3" type="audio/mpeg">
     </audio>
 
 </body>
