Se corrige la imagen

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <h2>Multimedia</h2>
     <p>Imagen de un paisaje hermoso:</p>
-    <img height="480 px" width="280" src="recursos/imagenes/" alt="paisaje hermoso">
+    <img height="480 px" width="280" src="recursos/imagenes/paisaje.jpg" alt="paisaje hermoso">
 
     <p>Video de Introducción a HTML:</p>
 
